feat(web): migrate to Node serverless API; add Mongo/Gemini integration, separate PEI classes, save/load sessions, and evaluation Word generation; reorg files to api/index.js + public/*; update vercel.json and package.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,10 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "api/index.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "15mb"
-      }
-    }
+    { "src": "api/index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "api/index.py"
-    }
-  ],
-  "functions": {
-    "api/index.py": {
-      "memory": 1024,
-      "maxDuration": 60
-    }
-  }
+    { "src": "/api/(.*)", "dest": "api/index.js" },
+    { "src": "/(.*)", "dest": "/public/$1" }
+  ]
 }
