--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,5 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
-ENV/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Flask
-instance/
-.webassets-cache
-
-# Environment variables
-.env
-
-# Generated files
-generated_units/
-*.docx
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
+node_modules/
+.generated/
+/tmp/
 .DS_Store
-Thumbs.db
-
-# Logs
-*.log
+.env
