--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,8 @@
   "routes": [
     { "src": "/api/(.*)", "dest": "api/index.js" },
     { "src": "^/$", "dest": "/public/index.html" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    { "src": "/favicon\\.(ico|png|svg)", "dest": "/public/favicon.svg" },
+    { "src": "/(.*\\.(css|js|html|svg|docx))", "dest": "/public/$1" },
+    { "src": "/(.*)", "dest": "/public/index.html" }
   ]
 }
