--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/index.js", "use": "@vercel/node" }
+    { "src": "api/index.js", "use": "@vercel/node" },
+    { "src": "public/**", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "api/index.js" },
-    { "src": "^/$", "dest": "/public/index.html" },
-    { "src": "/favicon\\.(ico|png|svg)", "dest": "/public/favicon.svg" },
-    { "src": "/(.*\\.(css|js|html|svg|docx))", "dest": "/public/$1" },
-    { "src": "/(.*)", "dest": "/public/index.html" }
+    { "src": "/api/(.*)", "dest": "/api/index.js" },
+    { "src": "/", "dest": "/public/index.html" },
+    { "src": "/favicon.ico", "dest": "/public/favicon.svg" },
+    { "src": "/favicon.png", "dest": "/public/favicon.svg" },
+    { "src": "/favicon.svg", "dest": "/public/favicon.svg" },
+    { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
