fix(critical): remove Python backend to use Node.js exclusively
BREAKING CHANGE: This removes the conflicting Python/Flask backend

- Remove Python API files (api/index.py, app.py, database.py, etc.)
- These files were causing Vercel to try to deploy Python instead of Node.js
- Update vercel.json to use simpler configuration
- Update .vercelignore to exclude Python files
- Update .gitignore to exclude archived Python files

The application now uses only the Node.js backend (api/index.js) with:
- Gemini AI for unit generation
- MongoDB for data storage
- docx library for Word document generation

This fixes the 404 errors caused by Vercel trying to serve the wrong backend.

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,5 +1,6 @@
 __pycache__/
 *.pyc
+*.py
 .git/
 .env
 *.log
@@ -8,3 +9,6 @@ __pycache__/
 test_generation.py
 .vscode/
 .idea/
+_archive/
+generated_units/
+node_modules/
