--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "api/index.js", "use": "@vercel/node" },
-    { "src": "public/**", "use": "@vercel/static" }
-  ],
+  "buildCommand": "echo 'No build needed'",
+  "outputDirectory": "public",
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/index.js" },
-    { "src": "/", "dest": "/public/index.html" },
-    { "src": "/favicon.ico", "dest": "/public/favicon.svg" },
-    { "src": "/favicon.png", "dest": "/public/favicon.svg" },
-    { "src": "/favicon.svg", "dest": "/public/favicon.svg" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
+    }
   ]
 }
