--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "docx": "^8.5.0",
     "mongodb": "^6.9.0",
     "node-fetch": "^3.3.2",
-    "jszip": "^3.10.1"
+    "jszip": "^3.10.1",
+    "xlsx": "^0.18.5"
   }
 }
