--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,19 @@
-# Configuration de l'API Claude (Anthropic)
-# Pour obtenir une clé API, visitez: https://console.anthropic.com/
-# Si cette clé n'est pas configurée, l'application utilisera un mode de génération basique
+# Gemini AI API Key
+GEMINI_API_KEY=your_gemini_api_key_here
 
-ANTHROPIC_API_KEY=your-api-key-here
+# MongoDB Connection String
+MONGO_URL=mongodb+srv://username:password@cluster.mongodb.net/database
+
+# Word Template URLs (required for document generation)
+# Upload the clean templates to a publicly accessible location
+# Options: Google Drive, GitHub, Vercel Blob Storage, etc.
+PLAN_TEMPLATE_URL=https://your-storage/Plan_CLEAN_TEMPLATE.docx
+EVAL_TEMPLATE_URL=https://your-storage/Eval_CLEAN_TEMPLATE.docx
+
+# Example with Google Drive:
+# PLAN_TEMPLATE_URL=https://drive.google.com/uc?export=download&id=YOUR_FILE_ID
+# EVAL_TEMPLATE_URL=https://drive.google.com/uc?export=download&id=YOUR_FILE_ID
+
+# Example with GitHub:
+# PLAN_TEMPLATE_URL=https://raw.githubusercontent.com/username/repo/main/Plan_CLEAN_TEMPLATE.docx
+# EVAL_TEMPLATE_URL=https://raw.githubusercontent.com/username/repo/main/Eval_CLEAN_TEMPLATE.docx
