--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
-    "docx": "^8.5.0",
     "docxtemplater": "^3.67.4",
-    "jszip": "^3.10.1",
     "mongodb": "^6.9.0",
-    "node-fetch": "^3.3.2",
-    "pizzip": "^3.2.0",
-    "xlsx": "^0.18.5"
+    "pizzip": "^3.2.0"
   }
 }
