--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ node_modules/
 __pycache__/
 _archive/
 generated_units/
+
+# Test files (local testing only)
+test-multi-criteria.js
+inspect_generated_doc.py
+test_output_*.docx
