--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "docx": "^9.5.1",
     "docxtemplater": "^3.67.4",
     "mongodb": "^6.9.0",
     "pizzip": "^3.2.0"
